# ithub-django-movies

./: .gitignore  README.md  TODO.md  manage.py  pyproject.toml  seed.py
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0002_customuser_experience.py
django_project/: asgi.py  settings.py  urls.py
feed/: urls.py  views.py
movies/: admin.py  forms.py  models.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_comment.py  0003_review_delete_comment.py  0004_review_author.py
static/css/: base.css
templates/: _base.html  feed.html
templates/account/: signup.html
templates/movies/: detail.html  index.html
templates/partials/: footer.html  nav.html  pagination.html
