[project]
name = "ithub-django"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django ~=5.2",
  "django-allauth[openid,socialaccount] ~=65.2",
  "crispy-bootstrap5 ~=2024.10",
  "psycopg[binary] ~=3.2",
  "whitenoise ~=6.7",
  "Faker ~=37.3",
]

[dependency-groups]
dev = [
  "django-debug-toolbar ~=4.4",
]
